kubernetes/core/traefik/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: default-headers
  namespace: default
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  forwardAuth:
    timeout: 600000ms
  headers:
    # Security Headers
    browserXssFilter: true # Prevents some types of XSS attacks by enabling the XSS filter in browsers
    contentTypeNosniff: true # Prevents browsers from interpreting files as a different MIME type
    forceSTSHeader: true # Ensures that STS is always sent
    stsIncludeSubdomains: true # Apply STS to all subdomains
    stsPreload: true # Allows the domain to be preloaded with STS by browsers
    stsSeconds: 15552000 # Sets the STS duration to 180 days (6 months)
    referrerPolicy: no-referrer # Ensures that the Referer header is not sent
    contentSecurityPolicy: "default-src 'none'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https:; style-src 'self' 'unsafe-inline' https:; img-src 'self' data: https:; font-src 'self' https: data:; connect-src 'self' https:; frame-src 'self' https:; media-src 'self' https:; object-src 'none'; frame-ancestors 'self'; base-uri 'self'; form-action 'self';" # CSP to prevent loading of unauthorized resources
    customFrameOptionsValue: SAMEORIGIN # Prevents clickjacking by only allowing framing from the same origin
    # CORS Headers (Enable as needed)
    customResponseHeaders:
      Access-Control-Allow-Origin: "*" # Allow requests from any origin (replace with specific domains if needed)
      Access-Control-Allow-Methods: "GET, POST, OPTIONS" # Specify allowed HTTP methods
      Access-Control-Allow-Headers: "Content-Type, Authorization" # Specify allowed headers
    # WebSocket Handling (Ensure proper forwarding of WebSocket connections)
    customRequestHeaders:
      X-Forwarded-Proto: https # Forward protocol to backend
      Upgrade: "websocket" # Enable WebSocket upgrade
    # BELOW NOT WORKING WITH POSTGRES WEBSITE
    #   Connection: "upgrade" # Set connection header for WebSockets
    # SSL Redirect and Strict Transport Security (STS)
    sslRedirect: true # Redirect HTTP to HTTPS
    forceSTSHeader: true # Enforce Strict Transport Security (STS)
    stsIncludeSubdomains: true # Apply STS to all subdomains
    stsPreload: true # Include the domain in STS preload list
    stsSeconds: 15552000 # STS max-age in seconds (6 months)
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: lan-ips
  namespace: 'default'
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "50"
spec:
  ipAllowList:
    sourceRange:
      - 192.168.69.1/24
---
apiVersion: traefik.io/v1alpha1
kind: 'Middleware'
metadata:
  name: 'forwardauth-authelia'
  namespace: 'default'
  labels:
    app.kubernetes.io/instance: 'authelia'
    app.kubernetes.io/name: 'authelia'
spec:
  forwardAuth:
    address: 'http://authelia/api/authz/forward-auth'
    authResponseHeaders:
      - 'Remote-User'
      - 'Remote-Groups'
      - 'Remote-Email'
      - 'Remote-Name'
